<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="#efefee">

	<LinearLayout 
		android:layout_width="fill_parent" android:layout_height="fill_parent"
		android:orientation="vertical" >


		<TextView android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:text="@string/pinNumber" android:textColor="#000000" />
		<EditText android:id="@+id/pinNo" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:password="true" />


		<TextView android:layout_width="fill_parent"
		android:textColor="#000000"	android:layout_height="wrap_content" android:text="@string/registerWalletBank" />
		<EditText android:id="@+id/bankName" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<TextView android:layout_width="fill_parent"
		android:textColor="#000000"	android:layout_height="wrap_content" android:text="@string/registerWalletBankAcc" />
		<EditText android:id="@+id/bankAcc" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<TextView android:layout_width="wrap_content"
			android:textColor="#000000"	android:layout_height="wrap_content" android:text="@string/registerWalletCard" />
			<Spinner android:id="@+id/creditCardTypeSpinner"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:prompt="@string/registerWalletCardType" />
		</LinearLayout>
		<TextView android:layout_width="fill_parent"
		android:textColor="#000000"	android:layout_height="wrap_content" android:text="@string/registerWalletCardNum" />
		<EditText android:id="@+id/creditCardNum"
			android:layout_width="fill_parent" android:layout_height="wrap_content" />
		<TextView android:layout_width="fill_parent"
		android:textColor="#000000"	android:layout_height="wrap_content" android:text="@string/registerWalletExpDate" />
		<EditText android:id="@+id/expDate" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:hint="yyyy-mm-dd" />
		<TextView android:layout_width="fill_parent"
		android:textColor="#000000"	android:layout_height="wrap_content" android:text="@string/registerWalletAmount" />
		<EditText android:id="@+id/amount" android:layout_width="fill_parent"
			android:layout_height="wrap_content" />
		<LinearLayout android:orientation="horizontal"
			android:layout_width="fill_parent" android:layout_height="wrap_content">
			<Button android:id="@+id/walletCancel" android:layout_width="wrap_content"
				android:layout_height="wrap_content" android:text="@string/cancel" />
			<Button android:id="@+id/walletConfirm" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/confirm" />
		</LinearLayout>
	</LinearLayout>
</ScrollView>