<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent" android:orientation="vertical"
android:background="#efefee">


<LinearLayout android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" android:background="#efefee" >
<TextView android:layout_width="fill_parent"
android:layout_height="wrap_content" android:text="@string/hello1" android:textColor="#000000"/>
<ListView android:id="@+id/ListView01" android:layout_height="fill_parent"
android:layout_width="fill_parent"></ListView>
</LinearLayout>




<LinearLayout
    android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" >
<TextView android:text = "@string/amount" 
android:layout_width="wrap_content"
  	android:layout_height="wrap_content" android:textColor="#000000"
 	/>

<TextView android:id = "@+id/total" 
android:layout_width="wrap_content"
  	android:layout_height="wrap_content" android:textColor="#000000"
 	/>
 </LinearLayout>
 
 <ScrollView android:id="@+id/ScrollView03"
android:layout_width="fill_parent"
android:layout_height="220px">

<LinearLayout
    android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" >
<LinearLayout     android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" >
 <CheckBox android:id="@+id/checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check" android:textColor="#000000" />
  </LinearLayout>      
  
  <ScrollView android:id="@+id/ScrollView01"
android:layout_width="fill_parent"
android:layout_height="90px">
      
      <LinearLayout   android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
  	<TextView
  		android:id = "@+id/Street"
  		android:text="@string/ShipStreet"
  		android:layout_width="wrap_content"
  	android:layout_height="wrap_content" android:textColor="#000000"  	/>
  	<EditText
  		android:id="@+id/ShipStreet" 
  		android:layout_width="155px"
  	android:layout_height="55px" 	/>
 
    <TextView
  		android:id = "@+id/Scity"
  		android:text="@string/ShipCity"
  		android:layout_width="wrap_content"
  	android:layout_height="wrap_content" android:textColor="#000000"
  	/>
  	<EditText android:id="@+id/ShipCity" android:layout_width="155px"
  	android:layout_height="55px"  	/>
 
       <TextView
  		android:id = "@+id/State"
  		android:text="@string/ShipState"
  		android:layout_width="wrap_content"
  	    android:layout_height="wrap_content" android:textColor="#000000"
  	/>
  	<EditText
  		android:id="@+id/ShipState"
  		android:layout_width="155px"
  	    android:layout_height="55px" 	/>
  
       <TextView
       android:id = "@+id/Zip" 
       android:text="@string/ShipZip" 
       android:layout_width="wrap_content"
  	   android:layout_height="wrap_content" android:textColor="#000000"	/>
  	<EditText android:id="@+id/ShipZip" 
  	android:layout_width="155px"
  	android:layout_height="55px" 	/>
    </LinearLayout>
    </ScrollView>
    
    
    <LinearLayout     android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" >
 <CheckBox android:id="@+id/checkbox1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/check1" android:textColor="#000000" />
  </LinearLayout>      
  
  <ScrollView android:id="@+id/ScrollView02"
android:layout_width="fill_parent"
android:layout_height="90px">
    <LinearLayout   android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content">
    
    <TextView
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/registerWalletBank"
  	  	android:id="@+id/registerWalletBank" android:textColor="#000000"
  	
  	
  />
  <EditText
  	android:id="@+id/bankName"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  />
  <TextView
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/registerWalletBankAcc"
  	  	android:id="@+id/registerWalletBankAcc" android:textColor="#000000"
  	
  />
  <EditText
  	android:id="@+id/bankAcc"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  />
  <LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  >
  <TextView
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/registerWalletCard"
  	  	android:id="@+id/registerWalletCard"
  	android:textColor="#000000"
  />
  <Spinner
  	android:id="@+id/creditCardTypeSpinner"
  	android:layout_width="fill_parent"
  	android:layout_height="50px"
  	android:prompt="@string/registerWalletCardType"
  />
  </LinearLayout>
  <TextView
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/registerWalletCardNum"
  	  	android:id="@+id/registerWalletCardNum"
  	android:textColor="#000000"
  />
  <EditText
  	android:id="@+id/creditCardNum"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  />
  <TextView
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:text="@string/registerWalletExpDate"
  	  	android:id="@+id/registerWalletExpDate"
  	android:textColor="#000000"
  />
  <EditText
  	android:id="@+id/expDate"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  />
    </LinearLayout>
    </ScrollView>
    </LinearLayout>
    </ScrollView>
    
<LinearLayout	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	  		android:gravity="center" >
 <Button
  	android:id="@+id/finalBuy"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/ConfirmPay"
  />
 <Button
  	android:id="@+id/ProductCatalog"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/ProCatalog"
  />
</LinearLayout>
</LinearLayout>