<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:orientation="vertical" android:background="#EFEFEE">
<LinearLayout  
android:layout_width="fill_parent"
android:layout_height="fill_parent" android:orientation="vertical"
 >


<LinearLayout android:orientation="vertical"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" >
<TextView android:layout_width="fill_parent"
android:layout_height="150px" android:text="@string/hello1"  android:textColor ="#000000"/>
<ListView android:id="@+id/ListView01" android:layout_height="fill_parent"
android:layout_width="fill_parent"></ListView>
</LinearLayout>




<LinearLayout
    android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" >
<TextView android:text = "@string/amount" 
android:layout_width="wrap_content" android:textColor ="#000000"
  	android:layout_height="wrap_content"/>

<TextView android:id = "@+id/total" 
android:layout_width="wrap_content"
  	android:layout_height="wrap_content" android:textColor="#000000"
 	/>
 </LinearLayout>

<LinearLayout	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" >
 <Button
  	android:id="@+id/ProceedToCheckout"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/ProceedToCheckout"
  />
 <Button
  	android:id="@+id/ProductCatalog"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/ProCatalog"
  />
</LinearLayout>
</LinearLayout></ScrollView>