<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:orientation="vertical"
  android:background="#efefee">
 
 <LinearLayout android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content" android:gravity="center">
  	<TextView
  		android:layout_width="match_parent"
  	android:layout_height="wrap_content"
  	android:text="Product Details"
  	android:textColor="#000000"
  	android:gravity="center"/>
  	</LinearLayout>
  <LinearLayout android:orientation="horizontal"
  	android:layout_width="50px"
  	android:layout_height="50px">
  
  <ImageView
  android:id ="@+id/image1"
  android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    </ImageView>
     
  </LinearLayout>
 
 
  
  	<LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  >
  <TextView
  	android:layout_width="100px"
  	android:layout_height="wrap_content"
  	android:text="@string/shoppingDetailsID"
  	android:textColor="#000000"
  />
  <TextView
  	android:id="@+id/ProductID"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	  	android:textColor="#ffffff"
  	
  />
  </LinearLayout>
  <LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  >
  <TextView
  	android:layout_width="100px"
  	android:layout_height="wrap_content"
  	android:text="@string/shoppingDetailsName"
  	  	android:textColor="#000000"
     />
  
  <TextView
  	android:id="@+id/ProductName"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	  	android:textColor="#000000"
  	
  />
  </LinearLayout>
  <LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  >
  <TextView
  	android:layout_width="100px"
  	android:layout_height="wrap_content"
  	android:text="@string/shoppingDetailsPrice"
  	  	android:textColor="#000000"
   />
  <TextView
  	android:id="@+id/ProductPrice"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	  	android:textColor="#000000"
  	
  />
  </LinearLayout>
  
  <LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  >
  <TextView
  	android:layout_width="100px"
  	android:layout_height="wrap_content"
  	android:text="@string/shoppingDetailsMerchantName"
  	  	android:textColor="#000000"
  />
  <Button
  	android:id="@+id/Click"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	  	android:textColor="#000000"
  	android:text="Click to View"
  />
  </LinearLayout>
  <LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  >
  <TextView
  	android:layout_width="100px"
  	android:layout_height="wrap_content"
  	android:text="@string/shoppingDetailsMerchantURL"
  	  	android:textColor="#000000"
  />
  
  <TextView
  	android:id="@+id/Quantity"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	  	android:textColor="#000000"
  	
  />
  </LinearLayout>
 <LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  >
   <TextView
  	android:layout_width="100px"
  	android:layout_height="wrap_content"
  	android:text="@string/Quantity"
  	  	android:textColor="#000000" 
  	  /> 
  <Spinner
  	android:id="@+id/quantityTypeSpinner"
  	android:layout_height="wrap_content"
  	android:prompt="@string/Quantity"
 
  android:layout_width="match_parent"/>
  
  </LinearLayout>
  <LinearLayout
  	android:orientation="horizontal"
  	android:layout_width="fill_parent"
  	android:layout_height="wrap_content"
  	android:gravity="center"
  	  >
   <Button
  	android:id="@+id/ViewBarcode"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="View Barcode"
  />
  <Button
  	android:id="@+id/ProductBuy"
  	android:layout_width="wrap_content"
  	android:layout_height="wrap_content"
  	android:text="@string/buy"
  />
 
  </LinearLayout>
</LinearLayout>
